# bevy_mod_outline

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
assets/: hollow.glb
examples/: alpha_mask.rs  animated_fox.rs  bloom.rs  cube.rs  flying_objects.rs  hollow.rs  morph_targets.rs  orbiting_wall.rs  picking.rs  pieces.rs  render_layers.rs  shapes.rs  torus.rs  ui_aa.rs  ui_mode.rs
src/: bundles.rs  common.wgsl  computed.rs  culling.rs  draw.rs  fragment.wgsl  generate.rs  lib.rs  msaa.rs  node.rs  outline.wgsl  pipeline.rs  pipeline_key.rs  propagate.rs  queue.rs  render.rs  scene.rs  stencil.wgsl  uniforms.rs  view_uniforms.rs  world_serialisation.rs
src/flood/: bounds.rs  compose_output.rs  compose_output.wgsl  flood_init.rs  jump_flood.rs  jump_flood.wgsl  mod.rs  node.rs  sobel_init.rs  sobel_init.wgsl
