[package]
name = "bevy_mod_outline"
version = "0.11.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A mesh outlining plugin for Bevy."
readme = "README.md"
homepage = "https://www.robinkay.uk/"
repository = "https://github.com/komadori/bevy_mod_outline/"
keywords = ["gamedev", "bevy", "outline"]
categories = ["game-engines", "rendering"]

[dependencies]
bevy = { version = "0.18.0", default-features = false, features = [
    "async_executor",
    "bevy_anti_alias",
    "bevy_post_process",
    "bevy_animation",
    "bevy_gltf",
    "gltf_animation",
    "bevy_scene",
    "std",
    "async_executor",
    "bevy_log",
    "bevy_color",
    "bevy_image",
    "bevy_pbr",
] }
bitfield = "0.19.4"
interpolation = { version = "0.3", optional = true }
thiserror = "2.0.18"
nonmax = "0.5"
itertools = { version = "0.14", optional = true }
wgpu = "27.0.1"

[features]
default = ["flood", "interpolation", "reflect"]
flood = ["dep:itertools"]
reflect = []

[dev-dependencies]
bevy = { version = "0.18.0", default-features = true, features = [
    "debug",
    "bevy_animation",
    "gltf_animation",
    "bevy_scene",
    "bevy_anti_alias",
    "bevy_picking",
    "mesh_picking",
    "bevy_post_process",
    "bevy_gltf",
    "bevy_pbr",
    "bevy_sprite",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_window",
    "bevy_winit",
    "default_font",
    "png",
    "x11",
    "ktx2",
    "smaa_luts",
    "tonemapping_luts",
    "zstd_rust",
] }

[[example]]
name = "shapes"
path = "examples/shapes.rs"

[[example]]
name = "pieces"
path = "examples/pieces.rs"

[[example]]
name = "flying_objects"
path = "examples/flying_objects.rs"

[[example]]
name = "render_layers"
path = "examples/render_layers.rs"

[[example]]
name = "animated_fox"
path = "examples/animated_fox.rs"

[[example]]
name = "hollow"
path = "examples/hollow.rs"

[[example]]
name = "morph_targets"
path = "examples/morph_targets.rs"

[[example]]
name = "ui_aa"
path = "examples/ui_aa.rs"

[[example]]
name = "alpha_mask"
path = "examples/alpha_mask.rs"

[[example]]
name = "picking"
path = "examples/picking.rs"

#[patch.crates-io]
#bevy = { path = "../bevy" }
